migrate code to common JDK 25 apis and constructs